--- a/Camay.html
+++ b/Camay.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
  <head>
   <h1>This is Githum</h1>
@@ -6,3 +7,8 @@
    <p>Hello World!!!</p>
  </body>
 </html> 
+<br>
+Almeda Asuncion
+<br>
+Pasig Catholic College
+</body>
