--- a/Camay.html
+++ b/Camay.html
@@ -1,12 +1,13 @@
 <html>
  <head>
-  <h1>This is Githum</h1>
+  <title></title>Hello Page</title>
  </head>
-<body>
-   <p>Hello World!!!</p>
+ <body>
+  <h1>Hello Github</h1>
+  <br>
+  Carl James Camay
+  <br>
+  Pasig Catholic College
  </body>
-</html> 
-<p> Carl James Camay </p>
-<p> Pasig Catholic College</p>
-</body>
-</html> 
+</html>
+  
