--- a/Camay.html
+++ b/Camay.html
@@ -1,13 +1,12 @@
 <html>
- <head>
-  <title>Hello Page</title>
- </head>
- <body>
-  <h1>Hello Github</h1>
-  <br>
-  Carl James Camay
-  <br>
-  Pasig Catholic College
- </body>
+  <head>
+    <h1>This is Github</h1>
+  </head>
+  <body>
+    <p>
+    <h1>Hello World</h1>
+    <br>
+    Carl James Abuan Camay<br>
+    Pasig Catholic College<br> 
+  </body>
 </html>
-  
